2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/35_mod_init_int_aff_float.deca
// Description :
//     afféctation du Mod dans int 
// Resultats :
//    Valide 
//
// Historique :
// cree le 01/01/2024
{
    float f1 = 4%2;

}