2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/02_type_sans_var.deca
// Description :
//      déclaration type sans variable 
// Resultats :
//    Erreur Contextuelle : ficher.deca:9:4:int identificateur non déclaré
// Historique :
// cree le 09/01/2024

{
    int; 
    
}